--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,7 @@
     "@types/node": "16.11.11",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.1.5",
-    "prettier": "^2.3.2",
+    "prettier": "2.5.1",
     "surge": "^0.23.0",
     "typescript": "^4.3.5",
     "unplugin-icons": "^0.7.0",
