--- a/app/package.json
+++ b/app/package.json
@@ -15,24 +15,24 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "maplibre-gl": "v1.15.2",
+    "maplibre-gl": "1.15.2",
     "nats.ws": "1.5.0",
-    "pinia": "^2.0.0-rc.0",
-    "vue": "^v3.2.0-beta.7",
-    "vue-router": "4.0.10"
+    "pinia": "2.0.6",
+    "vue": "3.2.23",
+    "vue-router": "4.0.12"
   },
   "devDependencies": {
-    "@iconify/json": "^1.1.382",
+    "@iconify/json": "1.1.438",
     "@types/node": "16.11.11",
-    "@vitejs/plugin-vue": "^1.3.0",
-    "@vue/compiler-sfc": "^3.1.5",
+    "@vitejs/plugin-vue": "1.10.1",
+    "@vue/compiler-sfc": "3.2.23",
     "prettier": "2.5.1",
-    "surge": "^0.23.0",
-    "typescript": "^4.3.5",
-    "unplugin-icons": "^0.7.0",
-    "vite": "^2.4.2",
-    "vite-plugin-windicss": "^1.2.7",
+    "surge": "0.23.0",
+    "typescript": "4.4.4",
+    "unplugin-icons": "0.12.22",
+    "vite": "2.6.14",
+    "vite-plugin-windicss": "1.5.4",
     "vue-tsc": "0.29.8",
-    "windicss": "3.1.6"
+    "windicss": "3.2.1"
   }
 }
