--- a/app/package.json
+++ b/app/package.json
@@ -25,8 +25,18 @@
   "devDependencies": {
     "@iconify/json": "1.1.438",
     "@types/node": "16.11.11",
+    "@typescript-eslint/eslint-plugin": "5.5.0",
+    "@typescript-eslint/parser": "5.5.0",
     "@vitejs/plugin-vue": "1.10.1",
     "@vue/compiler-sfc": "3.2.23",
+    "eslint": "8.4.0",
+    "eslint-config-airbnb-typescript": "16.1.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-promise": "5.2.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "eslint-plugin-vue": "8.1.1",
+    "eslint-plugin-vue-scoped-css": "2.0.0",
     "prettier": "2.5.1",
     "surge": "0.23.0",
     "typescript": "4.4.4",
