--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "eslint": "8.4.0",
     "eslint-config-airbnb-typescript": "16.1.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.25.3",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "5.2.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
