--- a/.github/workflows/linting-go.yml
+++ b/.github/workflows/linting-go.yml
@@ -1,49 +1,47 @@
-name: GO linting
-
+name: golangci-lint
 on:
-  push:
-    tags:
-      - v*
+  pull_request:
     branches:
       - main
     paths:
-      - 'packages/backend/**'
-      - 'packages/client/**'
-      - 'packages/collector-kvg/**'
-      - 'packages/pub-sub-porto/**'
-  pull_request:
-    paths:
-      - 'packages/backend/**'
-      - 'packages/client/**'
-      - 'packages/collector-kvg/**'
-      - 'packages/pub-sub-porto/**'
-
+      - client/**
+      - cmd/**
+      - collectors/**
+      - manager/**
+      - protocol/**
+  push:
+    branches:
+      - main
+permissions:
+  contents: read
+  # Optional: allow read access to pull request. Use with `only-new-issues` option.
+  # pull-requests: read
 jobs:
-  lint:
+  golangci:
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: golangci-lint backend
-        uses: golangci/golangci-lint-action@v2.5.2
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
         with:
-          version: v1.40.1
-          working-directory: packages/backend
+          # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
+          version: v1.43
 
-      - name: golangci-lint client
-        uses: golangci/golangci-lint-action@v2.5.2
-        with:
-          version: v1.40.1
-          working-directory: packages/client
+          # Optional: working directory, useful for monorepos
+          # working-directory: somedir
 
-      - name: golangci-lint pub-sub-proto
-        uses: golangci/golangci-lint-action@v2.5.2
-        with:
-          version: v1.40.1
-          working-directory: packages/pub-sub-proto
+          # Optional: golangci-lint command line arguments.
+          # args: --issues-exit-code=0
 
-      - name: golangci-lint collector-kvg
-        uses: golangci/golangci-lint-action@v2.5.2
-        with:
-          version: v1.40.1
-          working-directory: packages/pub-sub-proto
+          # Optional: show only new issues if it's a pull request. The default value is `false`.
+          # only-new-issues: true
+
+          # Optional: if set to true then the action will use pre-installed Go.
+          # skip-go-installation: true
+
+          # Optional: if set to true then the action don't cache or restore ~/go/pkg.
+          # skip-pkg-cache: true
+
+          # Optional: if set to true then the action don't cache or restore ~/.cache/go-build.
+          # skip-build-cache: true
