--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,4 +1,23 @@
+linters-settings:
+  misspell:
+    locale: US
+
 linters:
+  disable-all: true
   enable:
+    - bidichk
+    - deadcode
+    - errcheck
     - gofmt
+    - goimports
+    - gosimple
+    - govet
+    - ineffassign
+    - misspell
     - revive
+    - staticcheck
+    - structcheck
+    - typecheck
+    - unused
+    - varcheck
+    - whitespace
