--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -14,7 +14,8 @@
     "paths": {
       "~/*": ["./src/*"]
     },
-    "types": ["unplugin-icons/types/vue"]
+    "types": ["vite/client", "unplugin-icons/types/vue"],
+    "isolatedModules": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
