--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "fuse.js": "6.4.6",
-    "maplibre-gl": "1.15.2",
+    "maplibre-gl": "2.0.0-pre.6",
     "nats.ws": "1.5.0",
     "pinia": "2.0.6",
     "vue": "3.2.26",
