--- a/app/package.json
+++ b/app/package.json
@@ -36,7 +36,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-promise": "5.2.0",
+    "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "eslint-plugin-vue": "8.1.1",
     "eslint-plugin-vue-scoped-css": "2.0.0",
@@ -48,6 +48,7 @@
     "vite": "2.7.1",
     "vite-plugin-pwa": "0.11.11",
     "vite-plugin-windicss": "1.5.4",
+    "vue-eslint-parser": "8.0.1",
     "vue-tsc": "0.29.8",
     "windicss": "3.4.0"
   }
