--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install SSH Client 🔑
         uses: webfactory/ssh-agent@v0.4.1
         with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY_123 }}
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
