--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "fuse.js": "6.4.6",
     "maplibre-gl": "2.1.9",
     "nats.ws": "1.5.0",
+    "ua-parser-js": "^1.0.2",
     "vue": "3.2.33",
     "vue-router": "4.0.12"
   },
@@ -27,6 +28,7 @@
     "@types/canvas-confetti": "1.4.2",
     "@types/geojson": "7946.0.8",
     "@types/node": "16.11.11",
+    "@types/ua-parser-js": "^0.7.36",
     "@typescript-eslint/eslint-plugin": "5.5.0",
     "@typescript-eslint/parser": "5.5.0",
     "@vitejs/plugin-vue": "2.3.1",
