--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,7 @@ tasks:
       pnpm install
       gp sync-await env-file
     command: |
+      sed -i "s,VITE_NATS_URL=.*,VITE_NATS_URL=4223-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}," .env
       pnpm start
   - name: Go setup
     init: |
