--- a/renovate.json
+++ b/renovate.json
@@ -26,54 +26,27 @@
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
     }
   ],
-  "labels": [
-    "dependencies"
-  ],
+  "labels": ["dependencies"],
   "packageRules": [
     {
-      "matchManagers": [
-        "gomod",
-        "npm",
-        "dockerfile"
-      ]
+      "matchManagers": ["gomod", "npm", "dockerfile"]
     },
     {
-      "matchManagers": [
-        "woodpecker"
-      ],
-      "addLabels": [
-        "build"
-      ]
+      "matchManagers": ["woodpecker"],
+      "addLabels": ["build"]
     },
     {
       "groupName": "golang deps non-major",
-      "matchManagers": [
-        "gomod"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ],
-      "extends": [
-        "schedule:daily"
-      ]
+      "matchManagers": ["gomod"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "extends": ["schedule:daily"]
     },
     {
       "groupName": "pre-commit non-major",
-      "matchManagers": [
-        "pre-commit"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ],
-      "addLabels": [
-        "build"
-      ]
+      "matchManagers": ["pre-commit"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "addLabels": ["build"]
     }
   ],
-  "postUpdateOptions": [
-    "gomodTidy",
-    "gomodUpdateImportPaths"
-  ]
+  "postUpdateOptions": ["gomodTidy", "gomodUpdateImportPaths"]
 }
