--- a/app/package.json
+++ b/app/package.json
@@ -37,7 +37,8 @@
     "@iconify/json": "2.2.390",
     "@intlify/eslint-plugin-vue-i18n": "3.2.0",
     "@intlify/unplugin-vue-i18n": "6.0.8",
-    "@playwright/test": "^1.50.1",
+    "@playwright/test": "1.50.1",
+    "@tailwindcss/vite": "4.1.14",
     "@types/canvas-confetti": "1.9.0",
     "@types/geojson": "7946.0.16",
     "@types/node": "22.17.2",
@@ -46,16 +47,20 @@
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-vue-scoped-css": "2.9.0",
     "prettier": "3.5.3",
+    "tailwindcss": "4.1.14",
     "typescript": "5.8.3",
     "unplugin-icons": "22.1.0",
     "unplugin-vue-components": "28.4.1",
     "vite": "6.3.6",
     "vite-plugin-pwa": "0.21.2",
-    "vite-plugin-windicss": "1.9.4",
     "vitest": "3.0.8",
     "vue-tsc": "2.2.12",
-    "windicss": "3.5.6",
     "workbox-window": "7.3.0"
   },
-  "packageManager": "pnpm@10.6.2"
+  "packageManager": "pnpm@10.6.2",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@tailwindcss/oxide"
+    ]
+  }
 }
