--- a/app/package.json
+++ b/app/package.json
@@ -46,16 +46,16 @@
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-vue-scoped-css": "2.12.0",
     "prettier": "3.5.3",
-    "typescript": "5.8.3",
+    "typescript": "5.9.3",
     "unplugin-icons": "22.1.0",
     "unplugin-vue-components": "28.4.1",
     "vite": "7.3.0",
     "vite-plugin-pwa": "1.2.0",
     "vite-plugin-windicss": "1.9.4",
     "vitest": "4.0.16",
-    "vue-tsc": "2.2.12",
+    "vue-tsc": "3.2.1",
     "windicss": "3.5.6",
     "workbox-window": "7.3.0"
   },
-  "packageManager": "pnpm@10.26.2"
+  "packageManager": "pnpm@10.26.2+sha512.0e308ff2005fc7410366f154f625f6631ab2b16b1d2e70238444dd6ae9d630a8482d92a451144debc492416896ed16f7b114a86ec68b8404b2443869e68ffda6"
 }
