--- a/.github/workflows/check-go.yml
+++ b/.github/workflows/check-go.yml
@@ -16,12 +16,14 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v5
+      - uses: actions/checkout@v5
+      - uses: actions/setup-go@v6
         with:
           go-version: "1.25.5"
-
-      - uses: actions/checkout@v4
-
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v9
+        with:
+          version: v2.7.2
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
