--- a/app/package.json
+++ b/app/package.json
@@ -34,7 +34,12 @@
   "devDependencies": {
     "@antfu/eslint-config": "6.7.3",
     "@eslint/js": "9.39.2",
-    "@iconify/json": "2.2.421",
+    "@iconify-json/carbon": "1.2.15",
+    "@iconify-json/fa": "1.2.2",
+    "@iconify-json/fa-solid": "1.2.2",
+    "@iconify-json/ic": "1.2.4",
+    "@iconify-json/mdi": "1.2.3",
+    "@iconify-json/ph": "1.2.2",
     "@intlify/eslint-plugin-vue-i18n": "4.1.0",
     "@intlify/unplugin-vue-i18n": "11.0.3",
     "@playwright/test": "1.57.0",
