--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,7 +14,7 @@ tasks:
       gp sync-await env-file
     command: |
       sed -i "s,VITE_NATS_URL=.*,VITE_NATS_URL=wss://4223-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}," ../.env
-      pnpm start
+      pnpm run dev
   - name: Go setup
     init: |
       go mod tidy
