--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "pnpm": "10.28.2"
   },
   "scripts": {
-    "start": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite",
+    "dev": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite",
     "build": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite build",
     "preview": "vite preview",
     "lint": "eslint --max-warnings 0 .",
