--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-vue-scoped-css": "2.12.0",
     "prettier": "3.8.1",
+    "prettier-plugin-tailwindcss": "0.7.2",
     "tailwindcss": "4.1.18",
     "typescript": "5.9.3",
     "unplugin-icons": "22.5.0",
