--- a/gateway/Containerfile
+++ b/gateway/Containerfile
@@ -2,15 +2,15 @@ FROM golang:1.24-alpine AS build
 
 WORKDIR /src/
 COPY . /src/
-RUN cd /src/hub && CGO_ENABLED=0 go build -o /bin/hub
+RUN cd /src/gateway && CGO_ENABLED=0 go build -o /bin/gateway
 RUN mkdir /tmp-for-scratch
 
 FROM scratch
 EXPOSE 4568
 COPY --from=build /tmp-for-scratch /tmp
 COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
-COPY --from=build /bin/hub /bin/hub
+COPY --from=build /bin/gateway /bin/gateway
 COPY --from=build /usr/local/go/lib/time/zoneinfo.zip /
 ENV ZONEINFO=/zoneinfo.zip
 
-ENTRYPOINT ["/bin/hub"]
+ENTRYPOINT ["/bin/gateway"]
